--- a/index.html
+++ b/index.html
@@ -55,105 +55,193 @@
             <div class="influencer-products-details">
                 <div class="products">
                     <img src="./images/web-images/camera-14.jpg" alt="">
-                    <h2 class="product-name">Video Drone</h2>
+                    <h2 class="product-name">Video Camera</h2>
                     <h2 class="product-price">$350.00</h2>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
-                    <p class="product-sumary">Your product is rady you can order now.</p>
+                    <p class="product-sumary">Your product is rady you can order now.Some more information you can
+                        subscribe our primium pack</p>
                 </div>
                 <div class="products">
                     <img src="./images/web-images/camera-2.jpg" alt="">
-                    <h2 class="product-name">Video Drone</h2>
+                    <h2 class="product-name">Stand Camera</h2>
                     <h2 class="product-price">$350.00</h2>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <p class="product-sumary">Your product is rady you can order now.</p>
+                    <i class="fas fa-star"></i>&nbsp; &nbsp; <span class="reating">4.50</span>
+                    <p class="product-sumary">Your product is rady you can order now.Some more information you can
+                        subscribe our primium pack</p>
                 </div>
                 <div class="products">
                     <img src="./images/web-images/camera-3.jpg" alt="">
-                    <h2 class="product-name">Video Drone</h2>
-                    <h2 class="product-price">$350.00</h2>
+                    <h2 class="product-name">Drone Camera</h2>
+                    <h2 class="product-price">$450.00</h2>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <p class="product-sumary">Your product is rady you can order now.</p>
+                    <i class="fas fa-star"></i>&nbsp; &nbsp; <span class="reating">4.50</span>
+                    <p class="product-sumary">Your product is rady you can order now.Some more information you can
+                        subscribe our primium pack</p>
                 </div>
                 <div class="products">
                     <img src="./images/web-images/camera-4.jpg" alt="">
-                    <h2 class="product-name">Video Drone</h2>
-                    <h2 class="product-price">$350.00</h2>
+                    <h2 class="product-name">Lights</h2>
+                    <h2 class="product-price">$750.00</h2>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <p class="product-sumary">Your product is rady you can order now.</p>
+                    <i class="fas fa-star"></i>&nbsp; &nbsp; <span class="reating">4.50</span>
+                    <p class="product-sumary">Your product is rady you can order now.Some more information you can
+                        subscribe our primium pack</p>
                 </div>
                 <div class="products">
                     <img src="./images/web-images/camera-7.jpg" alt="">
-                    <h2 class="product-name">Video Drone</h2>
-                    <h2 class="product-price">$350.00</h2>
+                    <h2 class="product-name">Actioin Camera</h2>
+                    <h2 class="product-price">$250.00</h2>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <p class="product-sumary">Your product is rady you can order now.</p>
+                    <i class="fas fa-star"></i>&nbsp; &nbsp; <span class="reating">4.50</span>
+                    <p class="product-sumary">Your product is rady you can order now.Some more information you can
+                        subscribe our primium pack</p>
                 </div>
                 <div class="products">
                     <img src="./images/web-images/camera-9.jpeg" alt="">
-                    <h2 class="product-name">Video Drone</h2>
-                    <h2 class="product-price">$350.00</h2>
+                    <h2 class="product-name">Canon 6D</h2>
+                    <h2 class="product-price">$650.00</h2>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <p class="product-sumary">Your product is rady you can order now.</p>
+                    <i class="fas fa-star"></i>&nbsp; &nbsp; <span class="reating">4.50</span>
+                    <p class="product-sumary">Your product is rady you can order now.Some more information you can
+                        subscribe our primium pack</p>
                 </div>
                 <div class="products">
                     <img src="./images/web-images/camera-10.jpeg" alt="">
-                    <h2 class="product-name">Video Drone</h2>
-                    <h2 class="product-price">$350.00</h2>
+                    <h2 class="product-name">Airpods</h2>
+                    <h2 class="product-price">$150.00</h2>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <p class="product-sumary">Your product is rady you can order now.</p>
+                    <i class="fas fa-star"></i></i>&nbsp; &nbsp; <span class="reating">4.50</span>
+                    <p class="product-sumary">Your product is rady you can order now.Some more information you can
+                        subscribe our primium pack</p>
                 </div>
                 <div class="products">
                     <img src="./images/web-images/camera-12.jpeg" alt="">
-                    <h2 class="product-name">Video Drone</h2>
-                    <h2 class="product-price">$350.00</h2>
+                    <h2 class="product-name">Canon S27</h2>
+                    <h2 class="product-price">$650.00</h2>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <p class="product-sumary">Your product is rady you can order now.</p>
+                    <i class="fas fa-star"></i></i>&nbsp; &nbsp; <span class="reating">4.50</span>
+                    <p class="product-sumary">Your product is rady you can order now.Some more information you can
+                        subscribe our primium pack</p>
                 </div>
                 <div class="products">
                     <img src="./images/web-images/camera-13.jpg" alt="">
-                    <h2 class="product-name">Video Drone</h2>
+                    <h2 class="product-name">Airpods</h2>
                     <h2 class="product-price">$350.00</h2>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <p class="product-sumary">Your product is rady you can order now.</p>
+                    <i class="fas fa-star"></i></i>&nbsp; &nbsp; <span class="reating">4.50</span>
+                    <p class="product-sumary">Your product is rady you can order now.Some more information you can
+                        subscribe our primium pack</p>
                 </div>
             </div>
             <p class="icon-more">see more &nbsp;&nbsp; <i class="fas fa-arrow-right"></i></p>
+        </section>
+        <section class="feature">
+            <div class="influencer-title">
+                <h2> Important <span class="color">Influencer</span> Product</h2>
+            </div>
+            <div class="influencer-products-details">
+                <div class="products">
+                    <img src="./images/top-images/1.jpeg" alt="">
+                    <h2 class="product-name">Camera Memory</h2>
+                    <h2 class="product-price">$150.00</h2>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i></i>&nbsp; &nbsp; <span class="reating">4.50</span>
+                    <p class="product-sumary">Your product is rady you can order now.Some more information you can
+                        subscribe our primium pack</p>
+                </div>
+                <div class="products">
+                    <img src="./images/top-images/2.jpeg" alt="">
+                    <h2 class="product-name">Camera Lanse</h2>
+                    <h2 class="product-price">$550.00</h2>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i></i>&nbsp; &nbsp; <span class="reating">4.50</span>
+                    <p class="product-sumary">Your product is rady you can order now.Some more information you can
+                        subscribe our primium pack</p>
+                </div>
+                <div class="products">
+                    <img src="./images/web-images/camera-1.jpg" alt="">
+                    <h2 class="product-name">Action Camera</h2>
+                    <h2 class="product-price">$350.00</h2>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i></i>&nbsp; &nbsp; <span class="reating">4.50</span>
+                    <p class="product-sumary">Your product is rady you can order now.Some more information you can
+                        subscribe our primium pack </p>
+                </div>
+                <div class="products">
+                    <img src="./images/top-images/4.jpeg" alt="">
+                    <h2 class="product-name">Video Camera</h2>
+                    <h2 class="product-price">$450.00</h2>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i></i>&nbsp; &nbsp; <span class="reating">4.50</span>
+                    <p class="product-sumary">Your product is rady you can order now.Some more information you can
+                        subscribe our primium pack</p>
+                </div>
+                <div class="products">
+                    <img src="./images/top-images/5.jpeg" alt="">
+                    <h2 class="product-name">Kit Lense</h2>
+                    <h2 class="product-price">$250.00</h2>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <p class="product-sumary">Your product is rady you can order now.Some more information you can
+                        subscribe our primium pack</p>
+                </div>
+                <div class="products">
+                    <img src="./images/top-images/6.jpeg" alt="">
+                    <h2 class="product-name">Canon D60</h2>
+                    <h2 class="product-price">$950.00</h2>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>&nbsp; &nbsp; <span class="reating">4.50</span>
+                    <p class="product-sumary">Your product is rady you can order now.Some more information you can
+                        subscribe our primium pack</p>
+                </div>
+            </div>
         </section>
         <section class="offer-section">
             <div class="influencer-title">
@@ -164,8 +252,14 @@
                     <h1>SUBSCRIBE FOR LESEST UPDATE</h1>
                     <h2>UPDATE NOW</h2>
                     <div class="input">
-                        <input type="email" placeholder="enter your email"><i class="fas fa-star"></i>
+                        <input type="text" placeholder="Enter your name"> <i class="fab fa-telegram-plane"></i>
                     </div>
+                    <div class="input">
+                        <input type="email" placeholder="Enter your email"> <i class="fab fa-telegram-plane"></i>
+                    </div>
+                    <button class="banar-button">
+                        Submit Now &nbsp; <i class="fas fa-arrow-right"></i>
+                    </button>
                 </div>
                 <div class="offer-img">
                     <img src="./images/web-images/camera-4123304_960_720.jpg" alt="">
